feat(search): review search query